tests/valid/type_safety_ready_gap/direct_call.facet
fn callee() -> unrestricted () {
    ()
}

fn main() -> unrestricted () {
    (callee)
}
