tests/invalid/struct/recursive_struct.facet
struct Node {
  next: unrestricted Node
}

fn main() -> unrestricted () {
  ()
}
